Composition confirmation via redirected confirm page.

--- a/lang/en/compose.lang
+++ b/lang/en/compose.lang
@@ -41,3 +41,7 @@ COMPOSE_IMGFILE_ERRNOFILE = No file has been selected for ***field***
 COMPOSE_IMGFILE_ERRNOTMP  = An internal error (no upload temp file) occurred when processing ***field***
 
 COMPOSE_LEVEL_ERRNONE     = No visibility levels have been selected. You must select at least one visibility level.
+
+COMPOSE_ADDED_TITLE       = Article Added
+COMPOSE_ADDED_SUMMARY     = Article created and added to the system successfully.
+COMPOSE_ADDED_DESC        = Your article has been added to the system. If you set it for immediate publication, it should be visible on feeds now; timed articles will be released when the selected time has passed. You will be redirected to the compose form shortly, or you can click 'continue' to return to it now.
