Enable permissions handling for userbar, and compose link

--- a/lang/en/userbar.lang
+++ b/lang/en/userbar.lang
@@ -4,4 +4,5 @@ USERBAR_PROFILE_LOGOUT  = Log out
 USERBAR_PROFILE_LOGIN   = Log in
 
 USERBAR_ARTICLE_LIST    = Article list
+USERBAR_COMPOSE         = Add an article
 USERBAR_SITE_SETTINGS   = Administer site
