--- a/lang/en/global.lang
+++ b/lang/en/global.lang
@@ -6,6 +6,8 @@ API_BAD_OP   = Unknown API operation requested.
 API_BAD_CALL = Incorrect invocation of an API-only module.
 API_ERROR    = An internal API error has occurred: ***error***
 
+API_ERROR_NOAID = No article ID was included in the API request.
+
 # Times for Template::fancy_time
 TIMES_JUSTNOW = just now
 TIMES_SECONDS = %t seconds ago
@@ -24,3 +26,6 @@ TIMES_YEARS   = %t years ago
 
 BLOCK_BLOCK_DISPLAY   = Direct call to unimplemented block_display()
 BLOCK_SECTION_DISPLAY = Direct call to unimplemented section_display()
+
+PAGE_ERROR    = Error
+PAGE_ERROROK  = Okay
