--- a/lang/en/articlelist.lang
+++ b/lang/en/articlelist.lang
@@ -13,3 +13,5 @@ ALIST_CTRLEDIT       = Edit this article
 ALIST_CTRLHIDE       = Unpublish (hide) this article
 ALIST_CTRLDELETE     = Delete this article
 ALIST_CTRLUNDELETE   = Restore this article
+ALIST_CTRLUNHIDE     = Show this article
+ALIST_CTRLPUBLISH    = Publish this article immediately
