--- a/lang/en/navigation.lang
+++ b/lang/en/navigation.lang
@@ -1,6 +1,6 @@
 NAVBOX_PAGEOF  = Page ***pagenum*** of ***maxpage***
 NAVBOX_FIRST   = First
-NAVBOX_PREV    = Prev
-NAVBOX_NEXT    = Next
+NAVBOX_PREV    = Newer
+NAVBOX_NEXT    = Older
 NAVBOX_LAST    = Last
 NAVBOX_SPACER  =
