--- a/lang/en/compose.lang
+++ b/lang/en/compose.lang
@@ -62,3 +62,7 @@ COMPOSE_LEVEL_ERRNONE     = No visibility levels have been selected. You must se
 COMPOSE_ADDED_TITLE       = Article Added
 COMPOSE_ADDED_SUMMARY     = Article created and added to the system successfully.
 COMPOSE_ADDED_DESC        = Your article has been added to the system. If you set it for immediate publication, it should be visible on feeds now; timed articles will be released when the selected time has passed. You will be redirected to the compose form shortly, or you can click 'continue' to return to it now.
+
+COMPOSE_NOTIFICATION = Notifications
+COMPOSE_ACYEAR       = Academic Year
+COMPOSE_RECIPIENTS   = Recipients
