Summary/Full text auto-fill working.
If the user submits the article form with no summary, it is
automatically filled from the full text. Similarly, if there is a
summary and no full text, the full text is taken from the summary.

--- a/lang/en/compose.lang
+++ b/lang/en/compose.lang
@@ -57,7 +57,8 @@ COMPOSE_IMGURL_DESC = The image URL must be an absolute URL stating http:// or h
 COMPOSE_IMGFILE_ERRNOFILE = No file has been selected for ***field***
 COMPOSE_IMGFILE_ERRNOTMP  = An internal error (no upload temp file) occurred when processing ***field***
 
-COMPOSE_LEVEL_ERRNONE     = No visibility levels have been selected. You must select at least one visibility level.
+COMPOSE_LEVEL_ERRNONE        = No visibility levels have been selected. You must select at least one visibility level.
+COMPOSE_ERR_NOSUMMARYARTICLE = No text has been entered for the summary or article.
 
 COMPOSE_ADDED_TITLE       = Article Added
 COMPOSE_ADDED_SUMMARY     = Article created and added to the system successfully.
