--- a/lang/en/edit.lang
+++ b/lang/en/edit.lang
@@ -6,6 +6,7 @@ EDIT_ERROR_BADID_SUMMARY = Unable to obtain the data for the requested article.
 EDIT_FORM_TITLE          = Edit article
 EDIT_ARTICLE             = Edit article
 EDIT_SUBMIT              = Edit article
+EDIT_ISMINOR             = This is a minor edit.
 
 EDIT_FAILED              = Article editing failed
 
