--- a/lang/en/global.lang
+++ b/lang/en/global.lang
@@ -44,3 +44,6 @@ BLOCK_SECTION_DISPLAY = Direct call to unimplemented section_display()
 
 PAGE_ERROR    = Error
 PAGE_ERROROK  = Okay
+
+FATAL_ERROR         = Fatal Error
+FATAL_ERROR_SUMMARY = The system has encountered a fatal error and can not continue. The error is shown below.
