Including notification method in status email.

--- a/lang/en/cron.lang
+++ b/lang/en/cron.lang
@@ -50,5 +50,5 @@ CRONJOB_MESSAGE   = Message
 CRON_NOTIFY_STATUS  = Notifications for '***article***'
 CRON_NOTIFY_INTRO   = Dear ***realname***,
 CRON_NOTIFY_ABOUT   = This email contains information about the notifications sent by Newsagent for your recent article
-CRON_NOTIFY_STATES  = The statuses of the notifications are:
+CRON_NOTIFY_STATES  = The statuses of the notifications sent via "***method***" are:
 CRON_NOTIFY_HELPME  = If you need help with this message, please contact
