--- a/lang/en/edit.lang
+++ b/lang/en/edit.lang
@@ -13,3 +13,6 @@ EDIT_FAILED              = Article editing failed
 EDIT_EDITED_TITLE       = Article Edited
 EDIT_EDITED_SUMMARY     = Article edited successfully.
 EDIT_EDITED_DESC        = Your article has been updated successfully. If you set it for immediate publication, it should be visible on feeds now; timed articles will be released when the selected time has passed. Click 'Continue' to return to your message list.
+
+EDIT_CONFIRM_INTRO = Before your article is updated, please check the information provided here.
+EDIT_ERRORS        = Your article can not be updated at this time because:
