Support for templates, editing of templates, and using them.

--- a/lang/en/userbar.lang
+++ b/lang/en/userbar.lang
@@ -10,3 +10,5 @@ USERBAR_SITE_SETTINGS   = Administer site
 USERBAR_LOGIN_USER      = Username
 USERBAR_LOGIN_PASS      = Password
 USERBAR_LOGIN           = Log in
+
+USERBAR_TEMPLATES       = Templates
